network/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: network
spec:
  gatewayClassName: cilium
  listeners:
  - hostname: "*.yuchanns.xyz"
    name: yuchanns-wildcard
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  hostnames:
  - hubble.yuchanns.xyz
  parentRefs:
  - name: cilium-gateway
    namespace: network
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
